# nexova_ai

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
deploy/ai/: .env.example  docker-compose.ai-local-ports.yml  docker-compose.ai.yml  install-cloud-ai-services.sh  install-local-ai-services.sh
deploy/license_server/: .env.example  README.md  docker-compose.yml  server.py
docs/: AUTOMATED_LOCAL_AND_CLOUD_AI_DEPLOYMENT.md  BACKUP_AND_RESTORE_POLICY.md  CLOUD_AND_LOCAL_DEPLOYMENT_MODES.md  COMMERCIAL_PLATFORM_IMPLEMENTATION_PLAN.md  CUSTOM_APP_STANDARDS.md  DEPLOYMENT_ARCHITECTURE.md  DOCKER_CUSTOM_IMAGE_PLAN.md  HOSTING_STRATEGY.md  IMPLEMENTATION_BACKLOG.md  IMPLEMENTATION_ROADMAP.md  INTENT_SCHEMA.md  LOCAL_DEV_TO_PRODUCTION_FLOW.md  MISTRAL_INTEGRATION_ARCHITECTURE.md  MULTI_CLIENT_SITE_MODEL.md  PRIVACY_FIRST_AI_HOSTING.md  PRODUCTION_RELEASE_CHECKLIST.md  PRODUCT_SCOPE.md  RAG_ARCHITECTURE.md  REMAINING_DEVELOPMENT_PLAN.md  SECURITY_MODEL.md  SUBSCRIPTION_SUSPENSION_MODEL.md  TOOL_REGISTRY.md  VM_DEPLOYMENT_CHECKLIST.md  VPS_REQUIREMENTS.md  VPS_TEST_DEPLOYMENT_CHECKLIST.md
nexova_ai/: api.py  hooks.py  knowledge_api.py  modules.txt  patches.txt
nexova_ai/assistant/: __init__.py  actions.py  audit.py  contracts.py  discovery.py  dynamic_tools.py  intent.py  knowledge.py  license.py  llm.py  metadata.py  navigation.py  orchestrator.py  permissions.py  providers.py  query_engine.py  rag.py  rate_limit.py  read_only.py  registry.py  retention.py  safety.py  stt.py  (+5 more)
tests/: test_app_structure.py  test_production_controls.py
tools/: generate_brand_assets.ps1
(+24 files in other folders)
