[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexova_ai"
version = "0.0.1"
description = "AI assistant custom app for ERPNext."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Nexova", email = "admin@example.com" }
]
dependencies = []

[tool.setuptools.packages.find]
include = ["nexova_ai*"]
